[package]
name = "stats-client"
version = "0.1.0"
authors = ["Anthony Ikeda <anthony.ikeda@cognizant.com>"]
edition = "2018"
keywords = ["rust", "webclient", "package", "greet"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.59"
